2006-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c (label_of_current_slot): Close the tapefd if
	                                                 the label mismatch.

2006-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c (strip_failed_chunks):
	  - Get a **output_find as parameter.
	  - Check the label before remove a valid chunk.
	  - Memory management fix.

2006-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Improve message for .amandahosts.

2006-06-27  Ian Turner <ian@zmanda.com>
	* common-src/fileheader.c: Fix a bug where spanned dumps would 
	  always fail.

2006-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Fix test for holdingdisk negative size.

2006-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Don't set DEFAULT_TAPE_DEVICE if it is not set.
	* client-src/clientconf.c: Work DEFAULT_TAPE_DEVICE not set.
	* common-src/genversion.c: Work DEFAULT_TAPE_DEVICE not set.
	* recover-src/amrecover.c: Work DEFAULT_TAPE_DEVICE not set.
	* server-src/getconf.c:    Work DEFAULT_TAPE_DEVICE not set.

2006-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Paul Bijnens
	* server-src/amcheck.c: Check for access(hdp->diskdir, X_OK).

2006-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c (getconf_byname): Check for kt->keyword != NULL.
	* client-src/clientconf.c (client_getconf_byname): Ditto

2006-06-22  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: check_file_overwite.

2006-06-22  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Do the cleanup of the extract list
	                              at the extraction time
	* oldrecover-src/extract_list.c: Ditto.

2006-06-22  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Add new features.
	* ReleasesNotes: New files.

2006-06-22  Jean-Louis Martineau <martineau@zmanda.com>